--- a/style.css
+++ b/style.css
@@ -1,32 +1,64 @@
 body {
 	margin: 0px auto;
-	background-color: #d7d7d7;
+	background-color: #351330;
+	font-family: DIN, Helvetica, Arial, sans-serif;
 }
 #wrapper {
 
 }
 #container {
-	width: 960px;
+	max-width: 960px;
 	margin: 0px auto;
 	padding-top: 50px;
 	text-align: left;
-	border: 1px solid black;
+	border: 20px solid #424254;
+	/*border-left: 20px solid #424254;
+	border-right: 20px solid #424254;
+	border-bottom: 20px solid #424254;*/
+	background-color: #E8CAA4;
+
 }
 #paragraphs {
 	border: 1px solid black;
 }
 #inputForm {
 	width: 400px;
-	height: ;
+	height: 130px;
 	text-align: center;
 	border: 1px solid black;
-	border-radius: 25px;
+	border-radius: 9px;
 	margin: 0px auto;
+	padding-top: 31px;
+}
+#title {
+	margin: 0;
+	margin-top: -53px;
+	background-color: #E8CAA4;
+	display: inline-block;
+	padding: 0px 10px;
 }
 #output {
 	min-height: 300px;
 	min-width: 500px;
 	max-width: 800px;
-	border: 1px solid white;
 	margin: 0px auto;
+	margin-left: 80px;
+	margin-right: 40px;
+	margin-bottom: 60px;
+}
+.textInput {
+	background-color: #E8CAA4;
+	border: 1px solid black;
+	text-decoration: none;
+	padding: 10px;
+	font-size: 16px;
+}
+.textButton {
+	background-color: #64908A;
+	border: 2px solid #424254;
+	padding: 10px;
+	color: white;
+}
+.textButton:hover {
+	background-color: #CC2A41;
 }
